fix: improve footer text contrast to meet WCAG 2.1 AA requirements

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -6,3 +6,7 @@ div.site-header {
 div.site-logo {
   background-position: center center;
 }
+
+footer.site-footer {
+  color: #6A686D;
+}
